# is-libzip

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
axfive-libzip-sys/: Cargo.toml  build.rs  wrapper.h
axfive-libzip-sys/src/: lib.rs
is-libzip-sys/: Cargo.toml  build.rs  wrapper.h  zip.h  zip.lib  zlib.lib
is-libzip-sys/src/: bindings.rs  docs_zip.rs  lib.rs
src/: archive.rs  error.rs  file.rs  lib.rs  source.rs
