[package]
name = "axfive-libzip-sys"
version = "0.1.0"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
description = "Bindgen bindings to system libzip"
repository = 'https://gitlab.com/Taywee/axfive-libzip'
license = 'MIT'
keywords = ['libzip', 'archival', 'zip', 'compression', 'bindings']
categories = ['compression', 'filesystem', 'no-std']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.libc]
version = '0.2'
default-features = false

[build-dependencies]
bindgen = '0.55'

[dev-dependencies]
tempdir = '0.3'
