[package]
name = "axfive-libzip-sys"
version = "0.1.1"
authors = ["Taylor C. Richberger <taywee@gmx.com>"]
edition = "2018"
description = "Bindgen bindings to system libzip"
repository = 'https://gitlab.com/Taywee/axfive-libzip'
license = 'MIT'
keywords = ['libzip', 'archival', 'zip', 'compression', 'bindings']
categories = ['compression', 'filesystem']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = '0.55'

[dev-dependencies]
tempdir = '0.3'
